--- a/styles.css
+++ b/styles.css
@@ -17,10 +17,11 @@ body{
 }
 
 nav{
-    width: 100%;
     background-color: black;
+    width: 100%;
     height: 80px;
     line-height: 80px;
+    padding: 0px;
     display: flex;
     justify-content: space-between;
 }
@@ -29,6 +30,7 @@ nav{
     font-size: 30px;
     color: greenyellow;
     font-weight: bold;
+    margin-left: 10px;
 }
 
 
@@ -51,4 +53,18 @@ ul li{
 
 ul li a:hover{
     color: greenyellow;
+}
+
+button{
+    background: none;
+    border: 1px solid;
+    color: black;
+    font-size: 18px;
+    padding: 5px 20px;
+    border-radius: 6px;
+}
+
+button:hover{
+    background: greenyellow;
+    color: black;
 }
