--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&family=Raleway:wght@400;500;600&display=swap');
+
+
 body{
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    font-family:Poppins;
 }
 
 .main{
@@ -9,7 +13,6 @@ body{
 }
 
 .head{
-    background-image: url(images/main.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -17,13 +20,15 @@ body{
 }
 
 nav{
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.6);
     width: 100%;
     height: 80px;
     line-height: 80px;
     padding: 0px;
     display: flex;
     justify-content: space-between;
+    position: sticky;
+    top: 0px;
 }
 
 .logo a{
