--- a/styles.css
+++ b/styles.css
@@ -6,21 +6,16 @@ body{
     padding: 0px;
     box-sizing: border-box;
     font-family:Poppins;
+    color: aliceblue;
+    background-color: rgba(0, 0, 0);
 }
 
 .main{
     width: 100%;
 }
 
-.head{
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 100vh;
-}
-
 nav{
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgb(0, 0, 0,0.6);
     width: 100%;
     height: 80px;
     line-height: 80px;
@@ -32,12 +27,13 @@ nav{
 }
 
 .logo a{
-    font-size: 30px;
-    color: greenyellow;
-    font-weight: bold;
-    margin-left: 10px;
+    height: 80px;
+    margin-left: 15px;
 }
 
+.logo a img{
+    height: 80px;
+}
 
 a{
     text-decoration: none;
@@ -57,19 +53,33 @@ ul li{
 }
 
 ul li a:hover{
-    color: greenyellow;
+    color: red;
+}
+
+.about{
+    background-image: url(back1.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.content{
+    margin: auto;
+    width: 50%;
+    padding: 50px;
+    text-align: center;
+    background-color: rgba(0, 0, 0,0.8);
 }
 
 button{
     background: none;
     border: 1px solid;
-    color: black;
     font-size: 18px;
     padding: 5px 20px;
     border-radius: 6px;
+    color:white;
 }
 
 button:hover{
-    background: greenyellow;
-    color: black;
+    background: red;
 }
